--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js 1GnaiOoHxToTrVNtrlQ6XGp2ulvlLn_6EoLSjj1pTt1E"
+    "start": "node index.js 1GnaiOoHxToTrVNtrlQ6XGp2ulvlLn_6EoLSjj1pTt1E",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "@google-cloud/local-auth": "^2.1.0",
     "dotenv": "^16.4.1",
     "googleapis": "^105.0.0"
+  },
+  "devDependencies": {
+    "prettier": "3.2.4"
   }
 }
