create a new environment variable for sheet id

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 CLIENT_ID="YOUR_CLIENT_ID"
 CLIENT_SECRET="YOUR_CLIENT_SECRET"
 REFRESH_TOKEN="YOUR_REFRESH_TOKEN_OPTIONAL"
+SHEET_ID="SHEET_ID_PROVIDED"
